log
Fri 12 Aug 2022 12:57:13 PM UTC: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:44:21: error: expected expression before ‘]’ token
   44 |   *suma = t-sumaN(a[] n);
      |                     ^
exercises.c:44:13: error: too few arguments to function ‘sumaN’
   44 |   *suma = t-sumaN(a[] n);
      |             ^~~~~
exercises.c:21:5: note: declared here
   21 | int sumaN(int a[], int N) {
      |     ^~~~~
Compilation failed
b17c33c
Fri 12 Aug 2022 12:58:03 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:44:21: error: expected expression before ‘]’ token
   44 |   *suma = t-sumaN(a[], n);
      |                     ^
Compilation failed
b850b75
Fri 12 Aug 2022 12:58:21 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:44:12: error: ‘t’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   44 |   *suma = t-sumaN(a, n);
      |           ~^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
05fb24d
Fri 12 Aug 2022 12:58:35 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:44:21: error: ‘i’ undeclared (first use in this function)
   44 |   *suma = t-sumaN(a[i], n);
      |                     ^
exercises.c:44:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e79632c
